[project]
name = "beet"
version = "0.112.0"
description = "The Minecraft pack development kit"
readme = "README.md"
authors = [
    { name = "Valentin Berlier", email = "berlier.v@gmail.com" }
]
requires-python = ">=3.14"
dependencies = []

[project.scripts]
beet = "beet:main"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"
