[project]
name = "beet"
version = "0.112.0"
description = "The Minecraft pack development kit"
readme = "README.md"
authors = [
    { name = "Valentin Berlier", email = "berlier.v@gmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "click==8.1.7",
    "click-help-colors>=0.9.4",
    "jinja2>=3.1.6",
    "nbtlib==1.12.1",
    "pathspec>=0.12.1",
    "pillow>=12.0.0",
    "pydantic>=2.12.4",
    "pyyaml>=6.0.3",
    "toml>=0.10.2",
]

[project.scripts]
beet = "beet.toolchain.cli:main"

[project.entry-points."beet"]
commands = "beet.toolchain.commands"
autoload = "beet.contrib.default"

[project.entry-points."pytest11"]
beet = "beet.pytest_plugin"

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.0",
    "pytest-insta>=0.1.11",
    "pytest-minecraft>=0.2.0",
]
